--- a/style.css
+++ b/style.css
@@ -3,16 +3,21 @@
     flex-direction: column;
     border:1px solid;
     height: 500px;
-    width: 500px;
+    width: 400px;
     margin:auto;
+    border-radius: 10px;
+    background-color: lightgray;
 }
 .first, .second, .third, .forth, .fifth{
 display:flex;
 flex-direction: row;
 flex-grow:1;
-border:1px solid;
+margin-right: 30px;
+margin-left:30px;
+
 }
 .grow{
+    border-radius:10px;
     flex-grow:1;
 }
 #zero{
@@ -20,4 +25,11 @@ border:1px solid;
 }
 .display{
     height:50px;
+    border-radius: 10px;
+    margin:10px;
+    margin-left:30px;
+    margin-right: 30px;
+}
+.fifth{
+    margin-bottom: 20px;
 }
