--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ margin-left:30px;
 
 }
 .grow{
-    border-radius:10px;
+    border-radius:100px;
     flex-grow:1;
 }
 #zero{
@@ -32,4 +32,10 @@ margin-left:30px;
 }
 .fifth{
     margin-bottom: 20px;
+}
+.columns{
+    display:flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    flex-grow:1;
 }
