--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@ margin-left:30px;
     flex-shrink: 0;
     flex-grow:1;
 }
-#AC, #perc, #div, #mul, #div, #min, #plus, #eql{
+#AC, #perc, #div, #mul, #div, #min, #plus, #eql, #del{
     background-color: lightyellow;
 }
